objects/Infinity_Calculator__c.object
<CustomObject>
    <fields>
        <fullName>spouse_commissions__c</fullName>
        <label>Spouse Commissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>spouse_dividends__c</fullName>
        <label>Spouse Dividends</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>spouse_income_from_alimony__c</fullName>
        <label>Spouse Income From Alimony</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>spouse_interest__c</fullName>
        <label>Spouse Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>spouse_ira_income__c</fullName>
        <label>Spouse Ira Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>spouse_net_proceeds_from_sales_of_asse__c</fullName>
        <label>Spouse Net Proceeds From Sales Of Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>spouse_net_profit_from_business__c</fullName>
        <label>Spouse Net Profit From Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>spouse_net_profit_from_rental_properti__c</fullName>
        <label>Spouse Net Profit From Rental Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>spouse_pension_income__c</fullName>
        <label>Spouse Pension Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>spouse_royalties__c</fullName>
        <label>Spouse Royalties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>spouse_social_security_benefits__c</fullName>
        <label>Spouse Social Security Benefits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>spouse_take_home_pay__c</fullName>
        <label>Spouse Take Home Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>spouse_tips__c</fullName>
        <label>Spouse Tips</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>spouse_unemployment_benefits__c</fullName>
        <label>Spouse Unemployment Benefits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>spouse_veterans_benefits__c</fullName>
        <label>Spouse Veterans Benefits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>stock_non_ira_or_401k__c</fullName>
        <label>Stock Non Ira or 401k</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tax_refund__c</fullName>
        <label>Tax Refund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>taxes_payable__c</fullName>
        <label>Taxes Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>utilities__c</fullName>
        <label>Utilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vacation_homes__c</fullName>
        <label>Vacation Homes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vested_pension__c</fullName>
        <label>Vested Pension</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>your_bonuses__c</fullName>
        <label>Your Bonuses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>your_commissions__c</fullName>
        <label>Your Commissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>your_dividends__c</fullName>
        <label>Your Dividends</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>your_income_from_alimony__c</fullName>
        <label>Your Income From Alimony</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>your_interest__c</fullName>
        <label>Your Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>your_ira_income__c</fullName>
        <label>Your Ira Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>your_net_proceeds_from_sales_of_assets__c</fullName>
        <label>Your Net Proceeds From Sales Of Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>your_net_profit_from_business__c</fullName>
        <label>Your Net Profit From Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>your_net_profit_from_rental_properties__c</fullName>
        <label>Your Net Profit From Rental Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>your_pension_income__c</fullName>
        <label>Your Pension Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>your_royalties__c</fullName>
        <label>Your Royalties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>your_social_security_benefits__c</fullName>
        <label>Your Social Security Benefits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>your_take_home_pay__c</fullName>
        <label>Your Take Home Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>your_tips__c</fullName>
        <label>Your Tips</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>your_unemployment_benefits__c</fullName>
        <label>Your Unemployment Benefits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>your_veterans_benefits__c</fullName>
        <label>Your Veterans Benefits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Infinity Calculator</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Infinity Calculator</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Infinity Calculator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>